infra/k8s/auth-server.depl.yaml
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: auth-grpc
#   annotations:
#     nginx.ingress.kubernetes.io/backend-protocol: GRPC
#     nginx.ingress.kubernetes.io/grpc-backend: "true"
# spec:
#   rules:
#   - host: weconcert.dev
#     http:
#       paths:
#       - path: /api/?(.*)
#         backend:
#           serviceName: auth-server-srv
#           servicePort: 50054
# ---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server-depl
spec:
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      containers:
      - name: auth-server
        image: primitivofr/owly/auth-server
---

apiVersion: v1
kind: Service
metadata:
  name: auth-server-srv
spec:
  selector:
    app: auth-server
  ports:
  - name: auth-server
    protocol: TCP
    port: 50054
    targetPort: 50054
