infra/k8s/client.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: primitivofr/owly/client

---

apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
  - name: client
    protocol: TCP
    port: 80
    targetPort: 80
  - name: client-ng
    protocol: TCP
    port: 4200
    targetPort: 4200
