infra/k8s/message-server.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-server-depl
spec:
  selector:
    matchLabels:
      app: message-server
  template:
    metadata:
      labels:
        app: message-server
    spec:
      containers:
      - name: message-server
        image: primitivofr/owly/message-server
---

apiVersion: v1
kind: Service
metadata:
  name: message-server-srv
spec:
  selector:
    app: message-server
  ports:
  - name: message-server
    protocol: TCP
    port: 50053
    targetPort: 50053
