infra/k8s/user-server.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-server-depl
spec:
  selector:
    matchLabels:
      app: user-server
  template:
    metadata:
      labels:
        app: user-server
    spec:
      containers:
      - name: user-server
        image: primitivofr/owly/user-server
---

apiVersion: v1
kind: Service
metadata:
  name: user-server-srv
spec:
  selector:
    app: user-server
  ports:
  - name: user-server
    protocol: TCP
    port: 50051
    targetPort: 50051
